# sound-app-template

./: .gitignore  CMakeLists.txt  README.md
include/: iapplication.h
src/: application.cpp  application.h  program.cpp
